<resources>
    <string name="app_name">LastOrderBusiness</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="sid_offerplacement">Anzeigenerstellung</string>
    <string name="sid_restaurantname">1. Restaurantname</string>
    <string name="sid_restaurantname_hint">Restaurantname hier eingeben.</string>
    <string name="sid_offerdetailtext">2. Texteingabe:</string>
    <string name="sid_offerdetailtext_hint">Anzeigentext hier eingeben.</string>
    <string name="sid_enteradress">3. Adresseingabe:</string>
    <string name="sid_enteradress_hint">Adresse hier eingeben.</string>
    <string name="sid_angebotsdauer">4. Angebotsdauer:</string>
    <string name="sid_abschicken">abschicken</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="sid_login">Login</string>
    <string name="sid_login_registration">Registration</string>
    <string name="sid_login_info">Not a member? Register now.</string>

    <string name="sid_restaurant_eigentuemer">Eigentümer</string>
    <string name="sid_restaurant_restaurantName">Restaurantname</string>
    <string name="sid_restaurant_address">Address</string>
    <string name="sid_restaurant_email">Email</string>
    <string name="sid_restaurant_password">Password</string>
    <string name="sid_restaurant_phonenumber">Phone Number</string>
    <string name="sid_restaurant_signup">Sign up</string>
    <string name="sid_restaurant_save">Save</string>
    <string name="title_activity_main_navigation_drawer">MainNavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
