<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#FF4472C4">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_überschrift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="15dp"
            android:text="@string/sid_offerplacement"
            android:textColor="#FFF"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_RestaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView_überschrift"
            android:layout_marginTop="40dp"
            android:padding="10dp"
            android:text="@string/sid_restaurantname"
            android:textColor="#FFF"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_RestaurantName"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView_RestaurantName"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/outline_box_black"
            android:hint="@string/sid_restaurantname_hint"
            android:padding="5dp" />

        <TextView
            android:id="@+id/textView_Texteingabe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edit_RestaurantName"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:text="@string/sid_offerdetailtext"
            android:textColor="#FFF"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_Anzeigentext"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView_Texteingabe"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/outline_box_black"
            android:hint="@string/sid_offerdetailtext_hint"
            android:padding="5dp" />

        <TextView
            android:id="@+id/textView_Adresseingabe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_Anzeigentext"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:text="@string/sid_enteradress"
            android:textColor="#FFF"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_Adresseingabe"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView_Adresseingabe"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/outline_box_black"
            android:hint="@string/sid_enteradress_hint"
            android:padding="5dp" />


        <TextView
            android:id="@+id/timetolive_sektion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_Adresseingabe"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:text="@string/sid_angebotsdauer"
            android:textColor="#FFF"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ToggleButton
            android:id="@+id/timetolive_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/timetolive_sektion"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/outline_box_black"
            android:padding="5dp" />

        <LinearLayout
            android:id="@+id/temp_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:orientation="horizontal"
            android:layout_below="@+id/timetolive_config"
            android:weightSum="1"
            android:padding="5dp">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="dummy"
                android:layout_weight="0.40"
                android:background="@drawable/outline_box_black"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="dummy"
                android:layout_weight="0.40"
                android:background="@drawable/outline_box_black"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/perm_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:orientation="horizontal"
            android:layout_below="@+id/timetolive_config"
            android:padding="5dp">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="dummy"
                android:layout_weight="0.40"
                android:background="@drawable/outline_box_black"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="dummy"
                android:layout_weight="0.40"
                android:background="@drawable/outline_box_black"/>

        </LinearLayout>



        <Button
            android:id="@+id/Anzeige_abschicken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/temp_picker"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:gravity="bottom"
            android:text="@string/sid_abschicken" />


    </RelativeLayout>
</ScrollView>
