<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="smartdev.lastorderbusiness.login.CreateProfile">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_restaurant_eigentuemer"
        android:layout_above="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <TextView
        android:text="@string/sid_restaurant_restaurantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_above="@+id/editText_restaurant_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/sid_restaurant_phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_restaurant_phonenumber"
        android:layout_above="@+id/editText_restaurant_phonenumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_restaurant_adress"
        android:layout_above="@+id/textView_restaurant_phonenumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/sid_restaurant_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_restaurant_adress"
        android:layout_above="@+id/editText_restaurant_adress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_restaurant_name"
        android:layout_above="@+id/textView_restaurant_adress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:id="@+id/textView_welcome"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText_restaurant_phonenumber"
        android:layout_marginBottom="13dp"
        android:layout_above="@+id/button_restaurant_signUp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/sid_restaurant_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_restaurant_signUp"
        android:onClick="btnRestaurantSaveData_Click"
        android:layout_marginBottom="92dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:text="@string/sid_restaurant_eigentuemer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_restaurant_name"
        android:layout_above="@+id/editText_restaurant_eigentuemer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
