<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="smartdev.lastorderbusiness.login.LoginActivity"
    tools:showIn="@layout/activity_login">

    <Button
        android:text="@string/sid_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_login"
        android:onClick="btnRestaurantLogin_OnClick"
        android:layout_below="@+id/editText_login_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText_login_email"
        android:hint="email"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="69dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/or_line"
        android:id="@+id/or_section"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="91dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sid_login_info"
            android:textColor="#CCCCCC"
            android:typeface="normal"
            android:textAlignment="center"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:background="#F5f5f5"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_gravity="center" />
    </FrameLayout>

    <Button
        android:text="@string/sid_login_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_login_registration"
        android:onClick="btnLoginToRegistration_OnClick"
        android:layout_marginTop="16dp"
        android:layout_alignTop="@+id/or_section"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_login_password"
        android:hint="password"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/editText_login_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="Last Order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="32sp"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/or_section"
        android:layout_centerHorizontal="true"
        android:onClick="Skiperino"
        android:layout_marginBottom="30dp"
        android:id="@+id/button3" />

</RelativeLayout>

